// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:radios 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              <span
                class="a-TplField"
              >
                <span>
                  radios
                </span>
              </span>
            </span>
          </label>
          <div
            class="a-RadiosControl a-Form-control is-inline"
          >
            <label
              class="a-Checkbox a-Checkbox--radio a-Checkbox--full"
            >
              <input
                type="radio"
              />
              <i />
              <span
                class=""
              >
                Option A
              </span>
            </label>
            <label
              class="a-Checkbox a-Checkbox--radio a-Checkbox--full"
            >
              <input
                type="radio"
              />
              <i />
              <span
                class=""
              >
                Option B
              </span>
            </label>
            <label
              class="a-Checkbox a-Checkbox--radio a-Checkbox--full"
            >
              <input
                type="radio"
              />
              <i />
              <span
                class=""
              >
                Option C
              </span>
            </label>
            <label
              class="a-Checkbox a-Checkbox--radio a-Checkbox--full"
            >
              <input
                type="radio"
              />
              <i />
              <span
                class=""
              >
                Option D
              </span>
            </label>
          </div>
        </div>
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              <span
                class="a-TplField"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="a-Form-static"
          >
            <div
              class="a-Form-control"
            >
              <span
                class="a-PlainField"
              >
                <span
                  class="text-muted"
                >
                  -
                </span>
              </span>
            </div>
          </div>
        </div>
        <input
          style="display: none;"
          type="submit"
        />
      </form>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:radios 2`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              <span
                class="a-TplField"
              >
                <span>
                  radios
                </span>
              </span>
            </span>
          </label>
          <div
            class="a-RadiosControl a-Form-control is-inline"
          >
            <label
              class="a-Checkbox a-Checkbox--radio a-Checkbox--full"
            >
              <input
                type="radio"
              />
              <i />
              <span
                class=""
              >
                Option A
              </span>
            </label>
            <label
              class="a-Checkbox a-Checkbox--radio a-Checkbox--full"
            >
              <input
                type="radio"
              />
              <i />
              <span
                class=""
              >
                Option B
              </span>
            </label>
            <label
              class="a-Checkbox a-Checkbox--radio a-Checkbox--full"
            >
              <input
                type="radio"
              />
              <i />
              <span
                class=""
              >
                Option C
              </span>
            </label>
            <label
              class="a-Checkbox a-Checkbox--radio a-Checkbox--full"
            >
              <input
                type="radio"
              />
              <i />
              <span
                class=""
              >
                Option D
              </span>
            </label>
          </div>
        </div>
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              <span
                class="a-TplField"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="a-Form-static"
          >
            <div
              class="a-Form-control"
            >
              <span
                class="a-PlainField"
              >
                a
              </span>
            </div>
          </div>
        </div>
        <input
          style="display: none;"
          type="submit"
        />
      </form>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;
